--- a/treads-frontend/package.json
+++ b/treads-frontend/package.json
@@ -31,8 +31,9 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.3",
-    "@mui/material": "^6.4.3",
+    "@mui/material": "^6.4.5",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@mui/x-charts": "^7.27.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
