--- a/treads-frontend/compose.yaml
+++ b/treads-frontend/compose.yaml
@@ -9,12 +9,13 @@
 # https://github.com/docker/awesome-compose
 services:
   server:
+    user: "root"
     build:
       context: .
     environment:
       NODE_ENV: production
     ports:
-      - 5173:5173
+      - 3000:3000
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
