--- a/treads-frontend/package.json
+++ b/treads-frontend/package.json
@@ -11,13 +11,7 @@
     "preview": "vite preview",
     "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "prepare": "husky"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "format:check": "prettier --check ."
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -49,7 +43,8 @@
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -65,12 +60,11 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.2.0"
   }
 }
