--- a/treads-frontend/tsconfig.app.json
+++ b/treads-frontend/tsconfig.app.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "baseUrl": "./",
     "paths": {
       "@api/*": ["./src/api/*"],
