--- a/treads-backend/requirements.txt
+++ b/treads-backend/requirements.txt
@@ -15,6 +15,7 @@ django-cors-headers==4.7.0
 executing==2.2.0
 Flask==3.1.0
 fonttools==4.56.0
+gunicorn==23.0.0
 idna==3.10
 ipykernel==6.29.5
 ipython==8.32.0
