--- a/treads-frontend/Dockerfile
+++ b/treads-frontend/Dockerfile
@@ -1,136 +1,32 @@
-FROM node:18-alpine
+# Base
+ARG NODE_VERSION=22.13.1
+FROM node:${NODE_VERSION}-alpine as base
 
 WORKDIR /app
 
-COPY package.json .
-
-RUN npm install
-
-RUN npm i -g serve
+# Build
+FROM base as build
 
 COPY . .
 
+RUN npm ci
+
 RUN npm run build
+
+# Production
+FROM base as final
+
+ENV NODE_ENV production
+
+RUN npm i -g serve
+
+RUN chown -R node:node /app
+
+# Run the application as a non-root user.
+USER node
+
+COPY --from=build /app/dist ./dist
 
 EXPOSE 3000
 
-CMD [ "serve", "-s", "dist" ]
-# # syntax=docker/dockerfile:1
-
-# # Comments are provided throughout this file to help you get started.
-# # If you need more help, visit the Dockerfile reference guide at
-# # https://docs.docker.com/go/dockerfile-reference/
-
-# # Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
-
-# ARG NODE_VERSION=22.13.1
-
-# ################################################################################
-# # Use node image for base image for all stages.
-# FROM node:${NODE_VERSION}-alpine as base
-
-# # Set working directory for all build stages.
-# WORKDIR /usr/src/app
-
-
-# ################################################################################
-# # Create a stage for installing production dependecies.
-# FROM base as deps
-
-# # Download dependencies as a separate step to take advantage of Docker's caching.
-# # Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# # Leverage bind mounts to package.json and package-lock.json to avoid having to copy them
-# # into this layer.
-# RUN --mount=type=bind,source=package.json,target=package.json \
-#     --mount=type=bind,source=package-lock.json,target=package-lock.json \
-#     --mount=type=cache,target=/root/.npm \
-#     npm ci --omit=dev
-
-# ################################################################################
-# # Create a stage for building the application.
-# FROM deps as build
-
-# # Download additional development dependencies before building, as some projects require
-# # "devDependencies" to be installed to build. If you don't need this, remove this step.
-# RUN --mount=type=bind,source=package.json,target=package.json \
-#     --mount=type=bind,source=package-lock.json,target=package-lock.json \
-#     --mount=type=cache,target=/root/.npm \
-#     npm ci
-
-# # Copy the rest of the source files into the image.
-# COPY . .
-# # Run the build script.
-# RUN npm run build
-
-# ################################################################################
-# # Create a new stage to run the application with minimal runtime dependencies
-# # where the necessary files are copied from the build stage.
-# # FROM base as final
-
-# # # Use production node environment by default.
-# # ENV NODE_ENV production
-
-# # # Run the application as a non-root user.
-# # USER node
-
-# # # Copy package.json so that package manager commands can be used.
-# # COPY package.json .
-
-# # # Copy the production dependencies from the deps stage and also
-# # # the built application from the build stage into the image.
-# # COPY --from=deps /usr/src/app/node_modules ./node_modules
-# # COPY --from=build /usr/src/app/dist ./dist
-
-
-# # Expose the port that the application listens on.
-# # EXPOSE 4173
-
-# # Run the application.
-# # CMD npm run dev
-
-# # # In the final stage
-# # FROM base as final
-
-# # # Use production node environment by default.
-# # ENV NODE_ENV production
-
-# # # Run the application as a non-root user.
-# # USER node
-
-# # # Copy package.json so that package manager commands can be used.
-# # COPY package.json .
-
-# # # Copy the production dependencies from the deps stage and also
-# # # the built application from the build stage into the image.
-# # COPY --from=deps /usr/src/app/node_modules ./node_modules
-# # COPY --from=build /usr/src/app/dist ./dist
-
-# # # Expose the port that the application listens on.
-# # EXPOSE 4173
-
-# # # Run the application in production mode
-# # CMD npm run preview  # or use a static file server like serve
-
-# # In the final stage
-# FROM base as final
-
-# # Use development node environment
-# ENV NODE_ENV production
-
-# RUN chown -R node:node /usr/src/app
-
-# # Run the application as a non-root user.
-# USER node
-
-# # Copy package.json and lock file
-# COPY package.json package-lock.json ./
-
-# # Copy ALL node_modules including dev dependencies
-# COPY --from=build /usr/src/app/node_modules ./node_modules
-# COPY . .
-
-# # Expose the port that the application listens on.
-# EXPOSE 4173
-
-# # Run the application in dev mode
-# CMD npm run preview
+CMD ["serve", "-s","dist"]
