--- a/treads-backend/compose.yaml
+++ b/treads-backend/compose.yaml
@@ -17,6 +17,6 @@ services:
       - '8000:8000'
     depends_on:
       - db
-    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py makemigrations && python manage.py migrate && gunicorn app.wsgi:application --workers=3 --bind=0.0.0.0:8000 --timeout=60"
 volumes:
   postgres_data:
