--- a/compose.yaml
+++ b/compose.yaml
@@ -5,8 +5,8 @@ services:
       POSTGRES_DB: "test"
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "nayan123"
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./treads-backend/backupfile.sql:/docker-entrypoint-initdb.d/backupfile.sql
@@ -15,8 +15,8 @@ services:
 
   backend:
     build: ./treads-backend
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     depends_on:
       - db
     command: >
@@ -31,8 +31,8 @@ services:
   frontend:
     build: 
       context: ./treads-frontend
-    ports:
-      - "3000:3000"
+    # ports:
+    #   - "3000:3000"
     volumes:
       - ./treads-frontend:/app
     networks:
@@ -47,6 +47,8 @@ services:
     depends_on:
       - frontend
       - backend
+    networks:
+      - app-network
     restart: always
 
 volumes:
