--- a/compose.yaml
+++ b/compose.yaml
@@ -5,18 +5,15 @@ services:
       POSTGRES_DB: "test"
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "nayan123"
-    # ports:
-    #   - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./treads-backend/backupfile.sql:/docker-entrypoint-initdb.d/backupfile.sql
     networks:
-      - app-network
+      - backend-network
+    restart: unless-stopped
 
   backend:
     build: ./treads-backend
-    # ports:
-    #   - "8000:8000"
     depends_on:
       - db
     command: >
@@ -26,34 +23,39 @@ services:
     volumes:
       - ./treads-backend:/app
     networks:
-      - app-network
+      - backend-network
+    restart: unless-stopped
 
   frontend:
     build: 
       context: ./treads-frontend
-    # ports:
-    #   - "3000:3000"
     volumes:
       - ./treads-frontend:/app
     networks:
-      - app-network
+      - frontend-network
+      - backend-network
+    restart: unless-stopped
 
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/main.conf:/etc/nginx/nginx.conf
+      - ./nginx/server.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
       - backend
     networks:
-      - app-network
+      - frontend-network
+      - backend-network
     restart: always
 
 volumes:
   postgres_data:
 
 networks:
-  app-network:
+  frontend-network:
+    driver: bridge
+  backend-network:
     driver: bridge
