--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,56 @@
-server {
-    listen 80;
-    server_name localhost;  # Change to your domain name when deploying to production
+# Define rate limiting zones in http context
+http {
+    # Add rate limiting zone - this should be in a separate file like nginx.conf
+    # but we're including it here for completeness
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    
+    server {
+        listen 80;
+        server_name localhost;  # Change to your domain name when deploying to production
 
-    # Frontend
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        # Frontend
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-    # Basic error handling
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+        # Backend API requests
+        location /api/ {
+            proxy_pass http://backend:8000/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Only allow requests from your frontend
+            proxy_set_header Origin http://frontend:3000;
+            
+            # Optional: Add some basic rate limiting
+            limit_req zone=api burst=20 nodelay;
+        }
+
+        # Admin panel access (if needed)
+        location /admin/ {
+            proxy_pass http://backend:8000/admin/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Deny direct access to the backend
+        location /backend/ {
+            deny all;
+        }
+
+        # Basic error handling
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
     }
 }
