backend is connected with nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,140 +1,141 @@
-# backend docker file
-FROM python:3.12
+# This file should be placed at /etc/nginx/nginx.conf
+user  nginx;
+worker_processes  auto;
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
-RUN pip install --upgrade pip
-
-RUN pip install uv
-
-WORKDIR /app
-
-COPY requirements.txt /app/
-
-# RUN curl -sSf https://rye.astral.sh/get | RYE_NO_AUTO_INSTALL=1 RYE_INSTALL_OPTION="--yes" bash
-RUN PYTHONDONTWRITEBYTECODE=1 uv pip install --no-cache-dir --system -r requirements.txt
-# RUN uv pip install --no-cache-dir -r requirements.txt
-
-COPY . /app/
-
-EXPOSE 8000
-
-CMD [ "gunicorn", "app.wsgi" ]
-# frontend docker file
-# Base
-ARG NODE_VERSION=22.13.1
-FROM node:${NODE_VERSION}-alpine AS base
-
-WORKDIR /app
-
-# Build
-FROM base AS build
-
-COPY . .
-
-RUN npm ci
-
-RUN npm run build
-
-# Production
-FROM base AS final
-
-ENV NODE_ENV production
-
-RUN npm i -g serve
-
-RUN chown -R node:node /app
-
-# Run the application as a non-root user.
-USER node
-
-COPY --from=build /app/dist ./dist
-
-EXPOSE 3000
-
-CMD ["serve", "-s","dist"]
-
-# compose.yaml file in the root directory
-
-services:
-  db:
-    image: postgres:latest
-    environment:
-      POSTGRES_DB: "test"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "nayan123"
-    # ports:
-    #   - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./treads-backend/backupfile.sql:/docker-entrypoint-initdb.d/backupfile.sql
-    networks:
-      - app-network
-
-  backend:
-    build: ./treads-backend
-    # ports:
-    #   - "8000:8000"
-    depends_on:
-      - db
-    command: >
-      bash -c "python manage.py makemigrations &&
-               python manage.py migrate &&
-               gunicorn app.wsgi:application --workers=3 --bind=0.0.0.0:8000 --timeout=60"
-    volumes:
-      - ./treads-backend:/app
-    networks:
-      - app-network
-
-  frontend:
-    build: 
-      context: ./treads-frontend
-    # ports:
-    #   - "3000:3000"
-    volumes:
-      - ./treads-frontend:/app
-    networks:
-      - app-network
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - frontend
-      - backend
-    networks:
-      - app-network
-    restart: always
-
-volumes:
-  postgres_data:
-
-networks:
-  app-network:
-    driver: bridge
-
-# nginx config file
-server {
-    listen 80;
-    server_name localhost;  # Change to your domain name when deploying to production
-
-    # Frontend
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Basic error handling
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+events {
+    worker_connections  1024;
 }
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    # Define rate limiting zone here (in http context)
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+
+    include /etc/nginx/conf.d/*.conf;
+}
+
+# This file should be placed at /etc/nginx/conf.d/default.conf
+server {
+  listen 80;
+  server_name localhost;  # Change to your domain name when deploying to production
+
+  # Frontend
+  location / {
+      proxy_pass http://frontend:3000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      # Adding some useful headers for websockets if needed
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+  }
+
+  # Backend API requests
+  location /api/ {
+      proxy_pass http://backend:8000/api/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      # Only allow requests from your frontend
+      # proxy_set_header Origin http://frontend:3000;
+      
+      # Optional: Add some basic rate limiting
+      limit_req zone=api burst=20 nodelay;
+  }
+
+  # Admin panel access (if needed)
+  location /admin/ {
+      proxy_pass http://backend:8000/admin/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # Static files handling (if any)
+  location /static/ {
+      proxy_pass http://backend:8000/static/;
+  }
+
+  # Media files handling (if any)
+  location /media/ {
+      proxy_pass http://backend:8000/media/;
+  }
+
+  # Basic error handling
+  error_page 404 /404.html;
+  error_page 500 502 503 504 /50x.html;
+  location = /50x.html {
+      root /usr/share/nginx/html;
+  }
+}
+
+
+# this is the react application calling the backend api
+// src/api/axios.js
+import axios from 'axios';
+
+const baseURL = '/api/';
+
+const axiosInstance = axios.create({
+  baseURL,
+  withCredentials: true, // Required for sending cookies
+  headers: {
+    'Content-Type': 'application/json',
+  },
+});
+
+// Request interceptor to add CSRF token to headers
+axiosInstance.interceptors.request.use(
+  async (config) => {
+    // Only add CSRF token for non-GET requests
+    if (config.method !== 'get') {
+      // Get CSRF token from cookie
+      const csrfToken = document.cookie
+        .split('; ')
+        .find((row) => row.startsWith('csrftoken='))
+        ?.split('=')[1];
+
+      if (csrfToken) {
+        config.headers['X-CSRFToken'] = csrfToken;
+      } else {
+        // If no CSRF token exists, fetch it from the backend
+        try {
+          const response = await axios.get(`${baseURL}/get-csrf-token/`, {
+            withCredentials: true,
+          });
+          config.headers['X-CSRFToken'] = response.data.csrf_token;
+        } catch (error) {
+          console.error('Error fetching CSRF token:', error);
+        }
+      }
+    }
+    return config;
+  },
+  (error) => {
+    return Promise.reject(error);
+  }
+);
+
+export default axiosInstance;
