--- a/nginx/server.conf
+++ b/nginx/server.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     server_name localhost;  # Change to your domain name when deploying to production
 
-    # Frontend
+     # Frontend
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
@@ -23,8 +23,23 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Only allow requests from your frontend
-        # proxy_set_header Origin http://frontend:3000;
+        # Add CORS headers if needed
+        add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,X-CSRFToken' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        
+        # Respond to preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,X-CSRFToken' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
         
         # Optional: Add some basic rate limiting
         limit_req zone=api burst=20 nodelay;
