--- a/treads-frontend/package.json
+++ b/treads-frontend/package.json
@@ -30,7 +30,10 @@
     "@mui/x-charts": "^7.27.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "material-ui-popup-state": "^5.3.3",
     "path": "^0.12.7",
     "prettier": "^3.4.2",
@@ -45,12 +48,15 @@
     "serve": "^14.2.4",
     "styled-components": "^6.1.15",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.5",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -62,6 +68,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "lint-staged": "^15.3.0",
+    "papaparse": "^5.5.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
